--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,13 @@
 {
   "name": "GesatepedMobile",
-  "app_id": "",
-  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "type": "ionic-angular",
+  "proxies": [
+    {
+      "path": "/proxied",
+      "proxyUrl": "http://localhost:8080/GesatepedWS"
+    }
+  ]
 }
