--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,7 +7,7 @@
   "proxies": [
     {
       "path": "/proxied",
-      "proxyUrl": "http://localhost:8080/GesatepedWS"
+      "proxyUrl": "http://192.168.1.2:8080/GesatepedWS"
     }
   ]
 }
