--- a/ionic.config.json
+++ b/ionic.config.json
@@ -6,7 +6,7 @@
   "type": "ionic-angular",
   "proxies": [
     {
-      "path": "/proxied",
+      "path": "/GesatepedWS/proxied",
       "proxyUrl": "http://192.168.1.2:8080/GesatepedWS"
     }
   ]
